examples/test/testpolicy11582.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11582
  namespace: namespace123
spec:
  podSelector:
    matchLabels:
      key27: value27
      key30: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value45
          key45: value28
      podSelector:
        matchLabels:
          key10: value26
          key1: value20
          key4: value8
